src/test/examples/custom/invalid/semanticErr/forLoop/forLoopEndTypeErr.wacc
# Type mismatch in end expression in for loop

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  for i in 1 until 'c'
    do
        skip
    done
end
